===================
Django Yarr Changes
===================

Changelog
=========

0.3.14      2014-02-03  See UPGRADE
            Feature:    Simplified save/read state
            Internal:   Changed Entry .save and .read to .state (#35)
            Internal:   Refactored list_entries.js
            Bugfix:     Unread count updates correctly when reading items
            Bugfix:     Unread count shows next to abreviated feed

0.3.13      2014-01-05  See UPGRADE
            Feature:    Changed check_feeds --force to also force a db update
            Feature:    Allow more HTML tags in entries (#32)
            Bugfix:     Fixed entries not expiring correctly
            Bugfix:     Unread count at 0 removes class (#31)
            Bugfix:     Fixed urls.py for Django 1.6 (#30)
            Thanks to:  Chris Franklin (chrisfranklin) for #30
                        Tom Most (twm) for #31 and #32

0.3.12      2013-11-19
            Bugfix:     Fixed scroll buttons sprite

0.3.11      2013-11-15
            Feature:    Add unread count to feed list (#29)
            Feature:    Minor feed management tweaks (#26)
            Feature:    Add wrapper <span> for checkbox style-ability (#25)
            Feature:    Longer entry snippets in list mode (#24)
            Feature:    Items only scroll on click in list mode (#23)
            Thanks to:  Tom Most (twm) for all above changes
            Feature:    Added basic styling for unread count
            Feature:    Clarified parts of the instructions
            Feature:    Changed icons to ones based on Entypo

0.3.10      2013-10-23
            Internal:   Use render(), not render_to_response() (#20)
            Bugfix:     Removed debug messages from feeds.js
            Thanks to:  Tuk Bredsdorff (tiktuk) for #20

0.3.9       2013-09-20
            Bugfix:     Fixed layout fixed setting in views.list_entries

0.3.8       2013-09-15
            Feature:    Added toggle to display feed items oldest first (#18)