@@ -18,6 +18,7 @@
 {% csrf_token %}
 
 <table>
+<tr class="required"><th>Title:</th><td>{{ feed.title }}</td></tr>
 {{ feed_form.as_table }}
 <tr><td></td><td><input type="submit" value="Save changes" /></td></tr>
 </table>
