@@ -7,10 +7,11 @@ Changelog
 
 0.3.14      2014-02-03  See UPGRADE
             Feature:    Simplified save/read state
-            Internal:   Changed Entry .save and .read to .state (#35)
-            Internal:   Refactored list_entries.js
+            Bugfix:     Changed Entry .save and .read to .state (fixes #35)
+            Bugfix:     Added Feed.text for user-customisable title (fixes #34)
             Bugfix:     Unread count updates correctly when reading items
             Bugfix:     Unread count shows next to abreviated feed
+            Internal:   Refactored list_entries.js
 
 0.3.13      2014-01-05  See UPGRADE
             Feature:    Changed check_feeds --force to also force a db update
